--- a/hugo.yaml
+++ b/hugo.yaml
@@ -133,3 +133,8 @@ outputs:
 taxonomies:
   tag: tags
   category: categories
+
+# Cache configuration for better performance
+caches:
+  images:
+    dir: :cacheDir/images
