--- a/.github/workflows/hugo-deploy.yml
+++ b/.github/workflows/hugo-deploy.yml
@@ -10,28 +10,61 @@ on:
     - cron: '0 10 * * 2,5'
   workflow_dispatch: # Allow manual triggering
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+concurrency:
+  group: pages
+  cancel-in-progress: false
+
+defaults:
+  run:
+    shell: bash
+
 jobs:
   # Check job for PRs - validates build without deploying
   check:
     if: github.event_name == 'pull_request'
     runs-on: ubuntu-latest
+    env:
+      HUGO_VERSION: 0.152.2
+      NODE_VERSION: 22.20.0
+      TZ: UTC
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v5
         with:
           submodules: recursive
           fetch-depth: 0
 
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
-          hugo-version: 'latest'
-          extended: true
+          node-version: ${{ env.NODE_VERSION }}
+
+      - name: Install Hugo
+        run: |
+          curl -sLJO "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
+          mkdir "${HOME}/.local"
+          mkdir "${HOME}/.local/hugo"
+          tar -C "${HOME}/.local/hugo" -xf "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
+          rm "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
+          echo "${HOME}/.local/hugo" >> "${GITHUB_PATH}"
+
+      - name: Verify Hugo installation
+        run: |
+          echo "Hugo: $(hugo version)"
+
+      - name: Install Node.js dependencies
+        run: |
+          [[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true
 
       - name: Check Hugo build
         run: |
           echo "🔍 Checking Hugo build..."
-          hugo --gc --minify --buildFuture --buildExpired --verbose
+          hugo --gc --minify --buildFuture --buildExpired
           echo "✅ Hugo build check passed!"
 
       - name: Validate content
@@ -57,38 +90,43 @@ jobs:
           echo "- Content validation: ✅ Passed" >> $GITHUB_STEP_SUMMARY
           echo "- Ready for merge and deployment" >> $GITHUB_STEP_SUMMARY
 
-  # Build and deploy job for pushes to main/master and scheduled runs
-  build-and-deploy:
+  # Build job for production deployment
+  build:
     if: github.event_name != 'pull_request'
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      pages: write
-      id-token: write
+    env:
+      HUGO_VERSION: 0.152.2
+      NODE_VERSION: 22.20.0
+      TZ: UTC
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v5
         with:
           submodules: recursive
           fetch-depth: 0
-          token: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Setup Hugo
-        uses: peaceiris/actions-hugo@v3
-        with:
-          hugo-version: 'latest'
-          extended: true
 
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'
+          node-version: ${{ env.NODE_VERSION }}
 
       - name: Setup Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: '3.11'
+
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v5
+
+      - name: Install Hugo
+        run: |
+          curl -sLJO "https://github.com/gohugoio/hugo/releases/download/v${HUGO_VERSION}/hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
+          mkdir -p "${HOME}/.local/hugo"
+          tar -C "${HOME}/.local/hugo" -xf "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
+          rm "hugo_extended_${HUGO_VERSION}_linux-amd64.tar.gz"
+          echo "${HOME}/.local/hugo" >> "${GITHUB_PATH}"
 
       - name: Install Python dependencies
         run: |
@@ -98,6 +136,20 @@ jobs:
           echo "✅ Python dependencies installed:"
           pip list --format=columns | grep -E "(openai|pyyaml|requests|beautifulsoup4|markdown)"
 
+      - name: Verify installations
+        run: |
+          echo "Hugo: $(hugo version)"
+          echo "Node.js: $(node --version)"
+          echo "Python: $(python --version)"
+
+      - name: Install Node.js dependencies
+        run: |
+          [[ -f package-lock.json || -f npm-shrinkwrap.json ]] && npm ci || true
+
+      - name: Configure Git
+        run: |
+          git config core.quotepath false
+
       - name: Generate AI content (scheduled runs only)
         if: github.event_name == 'schedule'
         run: |
@@ -105,37 +157,88 @@ jobs:
           # TODO: Add AI content generation script here
           echo "⏭️ AI content generation will be implemented in next phase"
 
-      - name: Build Hugo site
+      - name: Cache restore
+        id: cache-restore
+        uses: actions/cache/restore@v4
+        with:
+          path: ${{ runner.temp }}/hugo_cache
+          key: hugo-${{ github.run_id }}
+          restore-keys: hugo-
+
+      - name: Build the site
         run: |
           echo "🏗️ Building Hugo site for deployment..."
-          hugo --gc --minify --enableGitInfo
+          hugo \
+            --gc \
+            --minify \
+            --enableGitInfo \
+            --baseURL "${{ steps.pages.outputs.base_url }}/" \
+            --cacheDir "${{ runner.temp }}/hugo_cache"
 
-      - name: Setup Pages
-        id: pages
-        if: github.event_name == 'push'
-        uses: actions/configure-pages@v4
+      - name: Cache save
+        id: cache-save
+        uses: actions/cache/save@v4
+        with:
+          path: ${{ runner.temp }}/hugo_cache
+          key: ${{ steps.cache-restore.outputs.cache-primary-key }}
 
-      - name: Upload Pages artifact
-        if: github.event_name == 'push'
+      - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
           path: ./public
 
+  # Deploy job
+  deploy:
+    if: github.event_name == 'push'
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
       - name: Deploy to GitHub Pages
-        if: github.event_name == 'push'
         id: deployment
         uses: actions/deploy-pages@v4
 
       - name: Deployment summary
-        if: github.event_name == 'push'
         run: |
           echo "## Deployment Results 🚀" >> $GITHUB_STEP_SUMMARY
           echo "- Site built successfully: ✅" >> $GITHUB_STEP_SUMMARY
           echo "- Deployed to GitHub Pages: ✅" >> $GITHUB_STEP_SUMMARY
-          echo "- Live at: https://penguin1899.github.io/blogs/" >> $GITHUB_STEP_SUMMARY
+          echo "- Live at: ${{ steps.deployment.outputs.page_url }}" >> $GITHUB_STEP_SUMMARY
 
-      - name: Commit AI generated content (if any)
-        if: github.event_name == 'schedule'
+  # AI content generation and commit job (for scheduled runs)
+  ai-content:
+    if: github.event_name == 'schedule'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    env:
+      PYTHON_VERSION: '3.11'
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v5
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+
+      - name: Setup Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ env.PYTHON_VERSION }}
+
+      - name: Install Python dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Generate AI content
+        run: |
+          echo "🤖 Generating AI-powered blog content..."
+          # TODO: Add AI content generation script here
+          echo "⏭️ AI content generation will be implemented in next phase"
+
+      - name: Commit AI generated content
         run: |
           git config --local user.email "41898282+github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
