--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-openai==1.3.0
-pyyaml==6.0.1
-requests==2.31.0
-beautifulsoup4==4.12.2
-markdown==3.5.1
+openai==1.35.0
+httpx==0.25.0
+pyyaml==6.0.2
+requests==2.32.3
+beautifulsoup4==4.12.3
+markdown==3.7
